Create stylesheet, seperate CSS from HTML

--- a/index.html
+++ b/index.html
@@ -5,128 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>typescript interactive narratives and stories</title>
-    <style>
-        body {
-            font-family: sans-serif;
-            margin: 0;
-        }
-        input[type="submit"] { 
-            cursor: pointer;
-            width: 100%;
-            padding: 0.5rem;
-            font-size: 18px;
-            min-height: 3rem;
-        }
-        .info, .world-output .main-title {
-            color: rgb(95, 110, 199);
-        }
-        .info {
-            text-decoration: underline;
-            cursor: pointer;
-        }
-        .output {
-            display: flex;
-            flex-direction: row;
-            align-items: flex-start;
-        }
-        .world-output, .event-output {
-            overflow: auto;
-            max-height: calc(100vh -  25rem);
-        }
-        @media screen and (min-width: 468px) {
-            .world-output, .event-output {
-                overflow: auto;
-                max-height: calc(100vh - 17rem);
-            }
-        }
-        @media screen and (min-width: 668px) {
-            .world-output, .event-output {
-                overflow: auto;
-                max-height: calc(100vh - 14rem);
-            }
-        }
-        @media screen and (min-width: 1200px) {
-            .world-output, .event-output {
-                overflow: auto;
-                max-height: calc(100vh - 12.5rem);
-            }
-        }
-        /* How wide is the world output sidebar? */
-        .world-output > div {
-            max-width: 25vw;
-        }
-        .event-output {
-            width: calc(100vw - 25vw);
-            padding: 1rem;
-            box-sizing: border-box;
-        }
-        .world-output {
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: flex-start;
-            align-items: flex-start;
-            font-size: 0.75rem;
-        }
-        .world-output h1 {
-            font-size: 26px;
-            padding: 0.75rem;
-            margin: 1rem 0;
-            background-color: rgb(113, 131, 235);
-            text-shadow: 2px 3px rgb(95, 110, 199);
-            color: #fff;
-        }
-        .world-output .main-title {
-            font-size: 48px;
-            text-align: center;
-            font-weight: lighter;
-            background-color: #fff;
-            text-shadow: none;
-            padding: 1rem 0;
-            margin: 0 auto;
-        }
-        .world-output h1:nth-child(2) {
-            margin-top: 0;
-        }
-        .world-output h2 {
-            font-weight: normal;
-        }
-        .quick-info {
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: flex-start;
-            align-items: center;
-        }
-        .quick-info div {
-            box-shadow: 0px 5px 5px rgba(0,0,0,.15);
-            padding: 0.5rem;
-            box-sizing: border-box;
-        }
-        .info-event {
-            padding: 2rem;
-            border-left: 2rem solid rgb(113, 131, 235);
-            font-family: monospace;
-            margin-left: -1rem;
-        }
-        .info-event h3 {
-            margin-top: 0;
-            font-weight: bold;
-            font-size: 24px;
-        }
-        .info-event p:last-of-type {
-            margin-bottom: 0;
-        }
-        .intro {
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            justify-content: center;
-            text-align: center;
-            margin: 1rem auto;
-            padding: 0 3rem;
-            min-height: 7rem;
-        }
-    </style>
+    <link rel="stylesheet" href="./src/style.css?v=0.0.0.1">
 </head>
 <body>
     <section class="intro">
